fix: horizontal scrollbar appear when screen size between 860 to 1034

--- a/css/responsive-styles.css
+++ b/css/responsive-styles.css
@@ -48,7 +48,7 @@
 
 }
 
-@media screen and (min-width: 860px) {
+@media screen and (min-width: 1021px) {
 
   #maincontent, header, footer {
     width: 1020px;
